--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ cache: bundler
 rvm:
   - 2.6.6
 before_install:
-  - gem install rails
+  - bundle install
   - mkdir -p sandbox
 
 script:
-  - rails new sandbox/my_app --minimal -m 
+  - bundle exec rails new sandbox/my_app --minimal -m rspec.rb
 
